--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   </nav>
   <!-- CONTENT -->
   <main class="content">
+    <!-- IMAGE -->
     <div class="slide" id="slide1">
       <div class="container text-center">
         <div class="col-sm-2 col-sm-offset-2">
@@ -57,6 +58,7 @@
         </div>
       </div>
     </div>
+    <!-- ABOUT -->
   	<div class="slide" id="slide2">
       <div class="container">
         <div class="row">
@@ -70,6 +72,7 @@
         </div>
   		</div>
     </div>
+    <!-- WORKS -->
   	<div class="slide" id="slide3">
       <div class="container">
         <div class="row">
@@ -119,6 +122,7 @@
         </div>
       </div>
     </div>
+    <!-- SKILLS -->
     <div class="slide" id="slide4">
       <div class="container">
         <div class="row">
@@ -149,6 +153,7 @@
         <div class="row">
           <div class="col-sm-1 col-sm-offset-1">
             <h3 class="no-marg">CSS</h3>
+            <p>LESS&nbsp;&&nbsp;SASS</p>
           </div>
           <div class="col-sm-10">
             <div class="progress">
@@ -163,6 +168,7 @@
         <div class="row">
           <div class="col-sm-1 col-sm-offset-1">
             <h3 class="no-marg">Javascript</h3>
+            <p>jQuery,&nbsp;Skrollr,&nbsp;&&nbsp;Fancybox</p>
           </div>
           <div class="col-sm-10">
             <div class="progress">
@@ -251,6 +257,7 @@
         </div>
       </div>
     </div>
+    <!-- CONTACT -->
   	<div class="slide" id="slide5">
       <div class="container">
         <!-- Contact -->
