home page responsiveness

--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
     <!-- IMAGE -->
     <div class="slide" id="slide1">
       <div class="container text-center">
-        <div class="col-sm-2 col-sm-offset-2">
+        <div class="col-md-2 col-md-offset-2">
           <h1><a href="#slide2">About</a></h1>
         </div>
-        <div class="col-sm-2">
+        <div class="col-md-2">
           <h1><a href="#slide3">Examples</a></h1>
         </div>
-        <div class="col-sm-2">
+        <div class="col-md-2">
           <h1><a href="#slide4">Skills</a></h1>
         </div>
-        <div class="col-sm-2">
+        <div class="col-md-2">
           <h1><a href="#slide5">Contact</a></h1>
         </div>
       </div>
