--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
         </div>
         <!-- HTML -->
         <div class="row">
-          <div class="col-sm-1 col-sm-offset-1">
+          <div class="col-sm-2 col-sm-offset-1 col-lg-1 col-lg-offset-1">
             <h3 class="no-marg">HTML</h3>
           </div>
-          <div class="col-sm-10">
+          <div class="col-sm-9 col-lg-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
               aria-valuemin="0" aria-valuemax="100" style="width:100%">
@@ -151,11 +151,11 @@
         </div>
         <!-- CSS -->
         <div class="row">
-          <div class="col-sm-1 col-sm-offset-1">
+          <div class="col-sm-2 col-sm-offset-1 col-lg-1 col-lg-offset-1">
             <h3 class="no-marg">CSS</h3>
             <p>LESS&nbsp;&&nbsp;SASS</p>
           </div>
-          <div class="col-sm-10">
+          <div class="col-sm-9 col-lg-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
               aria-valuemin="0" aria-valuemax="100" style="width:100%">
@@ -166,11 +166,11 @@
         </div>
         <!-- Javascript -->
         <div class="row">
-          <div class="col-sm-1 col-sm-offset-1">
+          <div class="col-sm-2 col-sm-offset-1 col-lg-1 col-lg-offset-1">
             <h3 class="no-marg">Javascript</h3>
             <p>jQuery,&nbsp;Skrollr,&nbsp;&&nbsp;Fancybox</p>
           </div>
-          <div class="col-sm-10">
+          <div class="col-sm-9 col-lg-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
               aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -181,10 +181,10 @@
         </div>
         <!-- Twig -->
         <div class="row">
-          <div class="col-sm-1 col-sm-offset-1">
+          <div class="col-sm-2 col-sm-offset-1 col-lg-1 col-lg-offset-1">
             <h3 class="no-marg">Twig</h3>
           </div>
-          <div class="col-sm-10">
+          <div class="col-sm-9 col-lg-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
               aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -195,10 +195,10 @@
         </div>
         <!-- Grails -->
         <div class="row">
-          <div class="col-sm-1 col-sm-offset-1">
+          <div class="col-sm-2 col-sm-offset-1 col-lg-1 col-lg-offset-1">
             <h3 class="no-marg">Grails</h3>
           </div>
-          <div class="col-sm-10">
+          <div class="col-sm-9 col-lg-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
               aria-valuemin="0" aria-valuemax="100" style="width:50%">
@@ -215,10 +215,10 @@
         </div>
         <!-- Groovy -->
         <div class="row">
-          <div class="col-sm-1 col-sm-offset-1">
+          <div class="col-sm-2 col-sm-offset-1 col-lg-1 col-lg-offset-1">
             <h3 class="no-marg">Groovy</h3>
           </div>
-          <div class="col-sm-10">
+          <div class="col-sm-9 col-lg-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
               aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -229,10 +229,10 @@
         </div>
         <!-- C++ -->
         <div class="row">
-          <div class="col-sm-1 col-sm-offset-1">
+          <div class="col-sm-2 col-sm-offset-1 col-lg-1 col-lg-offset-1">
             <h3 class="no-marg">C++</h3>
           </div>
-          <div class="col-sm-10">
+          <div class="col-sm-9 col-lg-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
               aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -243,10 +243,10 @@
         </div>   
         <!-- Python -->
         <div class="row">
-          <div class="col-sm-1 col-sm-offset-1">
+          <div class="col-sm-2 col-sm-offset-1 col-lg-1 col-lg-offset-1">
             <h3 class="no-marg">Python</h3>
           </div>
-          <div class="col-sm-10">
+          <div class="col-sm-9 col-lg-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
               aria-valuemin="0" aria-valuemax="100" style="width:50%">
