--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
           <div class="col-sm-9 col-lg-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
-              aria-valuemin="0" aria-valuemax="100" style="width:100%">
+              aria-valuemin="0" aria-valuemax="100" id="html-sk">
+              <!-- style="width:100%" -->
                 <span class="sr-only">100% Complete</span>
               </div>
             </div>
@@ -158,7 +159,8 @@
           <div class="col-sm-9 col-lg-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
-              aria-valuemin="0" aria-valuemax="100" style="width:100%">
+              aria-valuemin="0" aria-valuemax="100" id="css-sk">
+              <!--  style="width:100% -->
                 <span class="sr-only">100% Complete</span>
               </div>
             </div>
@@ -173,7 +175,8 @@
           <div class="col-sm-9 col-lg-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
-              aria-valuemin="0" aria-valuemax="100" style="width:90%">
+              aria-valuemin="0" aria-valuemax="100" id="js-sk">
+              <!-- 90% -->
                 <span class="sr-only">90% Complete</span>
               </div>
             </div>
@@ -187,8 +190,9 @@
           <div class="col-sm-9 col-lg-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
-              aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                <span class="sr-only">70% Complete</span>
+              aria-valuemin="0" aria-valuemax="100" id="twig-sk">
+              <!-- 80% -->
+                <span class="sr-only">80% Complete</span>
               </div>
             </div>
           </div>
@@ -201,7 +205,8 @@
           <div class="col-sm-9 col-lg-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
-              aria-valuemin="0" aria-valuemax="100" style="width:50%">
+              aria-valuemin="0" aria-valuemax="100" id="grail-sk">
+              <!-- 50% -->
                 <span class="sr-only">50% Complete</span>
               </div>
             </div>
@@ -221,7 +226,8 @@
           <div class="col-sm-9 col-lg-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
-              aria-valuemin="0" aria-valuemax="100" style="width:80%">
+              aria-valuemin="0" aria-valuemax="100" id="groov-sk">
+              <!-- 80% -->
                 <span class="sr-only">80% Complete</span>
               </div>
             </div>
@@ -235,7 +241,8 @@
           <div class="col-sm-9 col-lg-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
-              aria-valuemin="0" aria-valuemax="100" style="width:70%">
+              aria-valuemin="0" aria-valuemax="100" id="c-sk">
+                <!-- 70% -->
                 <span class="sr-only">70% Complete</span>
               </div>
             </div>
@@ -249,7 +256,8 @@
           <div class="col-sm-9 col-lg-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
-              aria-valuemin="0" aria-valuemax="100" style="width:50%">
+              aria-valuemin="0" aria-valuemax="100" id="pyth-sk">
+              <!-- 50% -->
                 <span class="sr-only">50% Complete</span>
               </div>
             </div>
