resume, name added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand visible-xs" href="#">Project name</a>
+        <a class="navbar-brand visible-xs" href="#">-MattJuszczyk-</a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
@@ -35,12 +35,15 @@
           <li id="nav4"><a href="#slide4">Skills</a></li>
           <li id="nav5"><a href="#slide5">Contact</a></li>
         </ul>
-        <div id="indicator"></div>
+        <div class="hidden-xs" id="indicator"></div>
       </div><!--/.nav-collapse -->
     </div>
   </nav>
   <!-- CONTENT -->
   <main class="content">
+    <!-- <div class="visible-xs" id="mobile-indicator-container" style="position: fixed; left:0; width:10px;">
+      <div id="mobile-indicator" style="background:black;"></div>
+    </div> -->
     <!-- IMAGE -->
     <div class="slide" id="slide1">
       <div class="container text-center">
@@ -61,6 +64,11 @@
     <!-- ABOUT -->
   	<div class="slide" id="slide2">
       <div class="container">
+        <div class="row">
+          <div class="col-xs-12 text-center">
+            <h1 class="no-top-marg font-bold" id="name">I'm Matt Juszczyk</h1>
+          </div>
+        </div>
         <div class="row">
           <div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-2">
             <img src="https://pbs.twimg.com/profile_images/649320022586691584/VxKYEkEG.jpg" class="img-circle" />
@@ -276,16 +284,19 @@
         </div>
         <div class="row lead text-center">
           <!-- Facebook, LinkedIn, Email, Phone -->
-          <div class="col-sm-3">
+          <div class="col-sm-2 col-sm-offset-1">
             <a href="https://www.facebook.com/mjuszczyk1" target="_blank" id="facebook"><i class="fa fa-facebook-official fa-3x"></i></a>
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-2">
             <a href="mailto:mjuszczk93@gmail.com" id="email"><i class="fa fa-envelope fa-3x"></i></a>
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-2">
             <a href="https://www.linkedin.com/in/matt-juszczyk-63aba4b7" target="_blank" id="linkedin"><i class="fa fa-linkedin-square fa-3x"></i></a>
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-2">
+            <a href="assets/dist/pdf/mattJuszczyk-resume.pdf" target="_blank" id="resume"><i class="fa fa-file-text fa-3x"></i></a>
+          </div>
+          <div class="col-sm-2">
             <a href="#" id="phone"><i class="fa fa-phone-square fa-3x"></i></a>
           </div>
         </div>
