--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -41,9 +41,8 @@
   </nav>
   <!-- CONTENT -->
   <main class="content">
-    <!-- <div class="visible-xs" id="mobile-indicator-container" style="position: fixed; left:0; width:10px;">
-      <div id="mobile-indicator" style="background:black;"></div>
-    </div> -->
+    <div class="visible-xs" id="mobile-indicator">
+    </div>
     <!-- IMAGE -->
     <div class="slide" id="slide1">
       <div class="container text-center">
@@ -65,7 +64,7 @@
   	<div class="slide" id="slide2">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 text-center">
+          <div class="col-md-8 col-md-push-2 col-xs-12 text-center">
             <h1 class="no-top-marg font-bold" id="name">I'm Matt Juszczyk</h1>
           </div>
         </div>
@@ -132,7 +131,11 @@
     </div>
     <!-- SKILLS -->
     <div class="slide" id="slide4">
-      <div class="container">
+      <div class="container" style="position: relative;">
+        <!-- <hr style="transform: rotate(90deg);" /> -->
+        <!-- <div style="margin-left: 16.66666667%;height:100%; position: absolute; width: 25%;"></div>
+        <div style="margin-left: 41.66666667%;height:100%; position: absolute; width: 25%;"></div>
+        <div style="margin-left: 66.66666667%;height:100%; position: absolute; width: 25%;"></div> -->
         <div class="row">
           <div class="col-xs-12">
             <h2 class="text-center">Skills</h2>
