old sites updated

--- a/index.html
+++ b/index.html
@@ -109,21 +109,21 @@
         </div>
         <div class="row screenshots">
           <div class="col-sm-4">
-            <a href="http://www.cavalierdaily.com/" target="_blank" alt="The Cavalier Daily link">
-              <img src="assets/dist/img/cav-ss.png" class="work-preview" alt="The Cavalier Daily screenshot">
-              <h4 class="text-center">The Cavalier Daily</h4>
+            <a href="http://www.mndaily.com/" target="_blank" alt="The Cavalier Daily link">
+              <img src="assets/dist/img/mnd-ss.png" class="work-preview" alt="The Cavalier Daily screenshot">
+              <h4 class="text-center">Minnesota Daily News</h4>
             </a>
           </div>
           <div class="col-sm-4">
-            <a href="http://www.amwordmag.com/" target="_blank" alt="American Word link">
-              <img src="assets/dist/img/awd-ss.png" class="work-preview" alt="American Word screenshot">
-              <h4 class="text-center">American Word Magazine</h4>
+            <a href="http://www.thepostathens.com/" target="_blank" alt="American Word link">
+              <img src="assets/dist/img/ohi-ss.png" class="work-preview" alt="American Word screenshot">
+              <h4 class="text-center">The Post Athens</h4>
             </a>
           </div>
           <div class="col-sm-4">
-            <a href="http://www.elonpendulum.com/" target="_blank" alt="Elon Pendulum link">
-              <img src="assets/dist/img/etp-ss.png" class="work-preview" alt="Elon Pendulum screenshot">
-              <h4 class="text-center">Elon Pendulum</h4>
+            <a href="http://www.elonnewsnetwork.com/" target="_blank" alt="Elon News Network link">
+              <img src="assets/dist/img/enn-ss.png" class="work-preview" alt="Elon News Network screenshot">
+              <h4 class="text-center">Elon News Network</h4>
             </a>
           </div>    
         </div>
