personal picture update

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <div class="row">
           <div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-2">
-            <img src="https://pbs.twimg.com/profile_images/649320022586691584/VxKYEkEG.jpg" class="img-circle" />
+            <img src="assets/dist/img/me.jpg" class="img-circle" />
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4 text-center">
             <h1>Media and Information senior at Michigan State University. Studying web development and computer science - can be found hiking or making music</h1>
