title update, name header bold

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>-MattJuszczyk-</title>
+    <title>&lt;/MattJuszczyk&gt;</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS -->
@@ -65,7 +65,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-push-2 col-xs-12 text-center">
-            <h1 class="no-top-marg font-bold" id="name">I'm Matt Juszczyk</h1>
+            <h1 class="no-top-marg text-bold" id="name">I'm Matt Juszczyk</h1>
           </div>
         </div>
         <div class="row">
