--- a/index.html
+++ b/index.html
@@ -45,18 +45,46 @@
     </div>
     <!-- IMAGE -->
     <div class="slide" id="slide1">
-      <div class="container text-center">
+      <div class="container">
         <div class="col-md-2 col-md-offset-2">
-          <h1><a href="#slide2">About</a></h1>
+          <a href="#slide2" class="shape-link">
+            <div class="triangle color-blue"></div>
+            <div class="square color-blue">
+              <h1>A</h1>
+            </div>
+            <div class="triangle flipped color-blue"></div>
+            <h1 class="text-center">About</h1>
+          </a>
         </div>
         <div class="col-md-2">
-          <h1><a href="#slide3">Examples</a></h1>
+          <a href="#slide3" class="shape-link">
+            <div class="triangle color-green"></div>
+            <div class="square color-green">
+              <h1>E</h1>
+            </div>
+            <div class="triangle flipped color-green"></div>
+            <h1 class="text-center">Examples</h1>
+          </a>
         </div>
         <div class="col-md-2">
-          <h1><a href="#slide4">Skills</a></h1>
+          <a href="#slide4" class="shape-link">
+            <div class="triangle color-pink"></div>
+            <div class="square color-pink">
+              <h1>S</h1>
+            </div>
+            <div class="triangle flipped color-pink"></div>
+            <h1 class="text-center">Skills</h1>
+          </a>
         </div>
         <div class="col-md-2">
-          <h1><a href="#slide5">Contact</a></h1>
+          <a href="#slide5" class="shape-link">
+            <div class="triangle color-blue"></div>
+            <div class="square color-blue">
+              <h1>C</h1>
+            </div>
+            <div class="triangle flipped color-blue"></div>
+            <h1 class="text-center">Contact</h1>
+          </a>
         </div>
       </div>
     </div>
