--- a/index.html
+++ b/index.html
@@ -102,56 +102,60 @@
             <img src="assets/dist/img/me.jpg" class="img-circle" />
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-            <h1>Media and Information senior at Michigan State University. Studying web development and computer science - can be found hiking or making music</h1>
+            <h1>Media and Information graduate from Michigan State University. Bachelor of Science in Media and Information - can be found hiking or making music</h1>
           </div>
         </div>
   		</div>
     </div>
     <!-- WORKS -->
   	<div class="slide" id="slide3">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-xs-12">
             <h2 class="text-center">Previous Work</h2>
           </div>
         </div>
-        <div class="row screenshots">
-          <div class="col-sm-4">
+        <div class="screenshots">
+          <div class="shot">
+            <div class="overlay"></div>
             <a href="http://www.theeagleonline.com/" target="_blank" alt="The Eagle Online link">
               <img src="assets/dist/img/awe-ss.png" class="work-preview" alt="The Eagle Online screenshot">
-              <h4 class="text-center">The Eagle Online</h4>
+              <h3 class="work-title">The Eagle Online</h3>
             </a>
           </div>
-          <div class="col-sm-4">
+          <div class="shot">
+            <div class="overlay"></div>
             <a href="http://statenews.com/" target="_blank" alt="The State News link">
               <img src="assets/dist/img/tsn-ss.png" class="work-preview" alt="The State News screenshot">
-              <h4 class="text-center">The State News</h4>
+              <h3 class="work-title">The State News</h3>
             </a>
           </div>
-          <div class="col-sm-4">
+          <div class="shot">
+            <div class="overlay"></div>
             <a href="http://www.dukechronicle.com/" target="_blank" alt="Duke Chronicle link">
               <img src="assets/dist/img/dtc-ss.png" class="work-preview" alt="Duke Chronicle screenshot">
-              <h4 class="text-center">Duke Chronicle</h4>
+              <h3 class="work-title">Duke Chronicle</h3>
             </a>
           </div>
-        </div>
-        <div class="row screenshots">
-          <div class="col-sm-4">
+          <div class="shot">
+            <div class="overlay"></div>
             <a href="http://www.mndaily.com/" target="_blank" alt="The Cavalier Daily link">
               <img src="assets/dist/img/mnd-ss.png" class="work-preview" alt="The Cavalier Daily screenshot">
-              <h4 class="text-center">Minnesota Daily News</h4>
+              <h3 class="work-title">Minnesota Daily News</h3>
             </a>
           </div>
-          <div class="col-sm-4">
+          <div class="shot">
+            <div class="overlay"></div>
             <a href="http://www.thepostathens.com/" target="_blank" alt="American Word link">
               <img src="assets/dist/img/ohi-ss.png" class="work-preview" alt="American Word screenshot">
-              <h4 class="text-center">The Post Athens</h4>
+              <h3 class="work-title">The Post Athens</h3>
             </a>
           </div>
-          <div class="col-sm-4">
+          <div class="shot">
+            <div class="overlay"></div>
             <a href="http://www.elonnewsnetwork.com/" target="_blank" alt="Elon News Network link">
               <img src="assets/dist/img/enn-ss.png" class="work-preview" alt="Elon News Network screenshot">
-              <h4 class="text-center">Elon News Network</h4>
+              <h3 class="work-title">Elon News Network</h3>
             </a>
           </div>    
         </div>
@@ -315,20 +319,17 @@
         </div>
         <div class="row lead text-center">
           <!-- Facebook, LinkedIn, Email, Phone -->
-          <div class="col-sm-2 col-sm-offset-1">
+          <div class="col-sm-3">
             <a href="https://www.facebook.com/mjuszczyk1" target="_blank" id="facebook"><i class="fa fa-facebook-official fa-3x"></i></a>
           </div>
-          <div class="col-sm-2">
+          <div class="col-sm-3">
             <a href="mailto:mjuszczk93@gmail.com" id="email"><i class="fa fa-envelope fa-3x"></i></a>
           </div>
-          <div class="col-sm-2">
+          <div class="col-sm-3">
             <a href="https://www.linkedin.com/in/matt-juszczyk-63aba4b7" target="_blank" id="linkedin"><i class="fa fa-linkedin-square fa-3x"></i></a>
           </div>
-          <div class="col-sm-2">
+          <div class="col-sm-3">
             <a href="assets/dist/pdf/mattJuszczyk-resume.pdf" target="_blank" id="resume"><i class="fa fa-file-text fa-3x"></i></a>
-          </div>
-          <div class="col-sm-2">
-            <a href="#" id="phone"><i class="fa fa-phone-square fa-3x"></i></a>
           </div>
         </div>
         <!-- END Contact -->
