skill update - next is responsive update

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <div class="row">
           <div class="col-sm-2 col-sm-offset-1 col-lg-1 col-lg-offset-1">
             <h3 class="no-marg">Javascript</h3>
-            <p>jQuery,&nbsp;Skrollr,&nbsp;&&nbsp;Fancybox</p>
+            <p>jQuery,&nbsp;Node.js,&nbsp;Skrollr</p>
           </div>
           <div class="col-sm-9 col-lg-10">
             <div class="progress">
@@ -221,6 +221,22 @@
               aria-valuemin="0" aria-valuemax="100" id="js-sk">
               <!-- 90% -->
                 <span class="sr-only">90% Complete</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- PHP -->
+        <div class="row">
+          <div class="col-sm-2 col-sm-offset-1 col-lg-1 col-lg-offset-1">
+            <h3 class="no-marg">PHP</h3>
+            <p>Drupal,&nbsp;Laravel,&nbsp;Wordpress</p>
+          </div>
+          <div class="col-sm-9 col-lg-10">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="80"
+              aria-valuemin="0" aria-valuemax="100" id="php-sk">
+              <!-- 90% -->
+                <span class="sr-only">80% Complete</span>
               </div>
             </div>
           </div>
@@ -235,7 +251,7 @@
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
               aria-valuemin="0" aria-valuemax="100" id="twig-sk">
               <!-- 80% -->
-                <span class="sr-only">80% Complete</span>
+                <span class="sr-only">70% Complete</span>
               </div>
             </div>
           </div>
