ss overlayed by default

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <img src="assets/dist/img/me.jpg" class="img-circle" />
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-            <h1>Media and Information graduate from Michigan State University. Bachelor of Science in Media and Information - can be found hiking or making music</h1>
+            <h1>Bachelor of Science in Media and Information graduate from Michigan State University - can also be found hiking or making music</h1>
           </div>
         </div>
   		</div>
