social links updated

--- a/index.html
+++ b/index.html
@@ -336,16 +336,35 @@
         <div class="row lead text-center">
           <!-- Facebook, LinkedIn, Email, Phone -->
           <div class="col-sm-3">
-            <a href="https://www.facebook.com/mjuszczyk1" target="_blank" id="facebook"><i class="fa fa-facebook-official fa-3x"></i></a>
+            <a href="https://www.facebook.com/mjuszczyk1" target="_blank" id="facebook">
+              <span class="fa-stack fa-2x">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-facebook-official fa-stack-1x"></i>  
+            </a>
           </div>
           <div class="col-sm-3">
-            <a href="mailto:mjuszczk93@gmail.com" id="email"><i class="fa fa-envelope fa-3x"></i></a>
+            <a href="mailto:mjuszczk93@gmail.com" id="email">
+              <span class="fa-stack fa-2x">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-envelope fa-stack-1x"></i>
+              </span>
+            </a>
           </div>
           <div class="col-sm-3">
-            <a href="https://www.linkedin.com/in/matt-juszczyk-63aba4b7" target="_blank" id="linkedin"><i class="fa fa-linkedin-square fa-3x"></i></a>
+            <a href="https://www.linkedin.com/in/matt-juszczyk-63aba4b7" target="_blank" id="linkedin">
+              <span class="fa-stack fa-2x">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-linkedin-square fa-stack-1x"></i>
+              </span>
+            </a>
           </div>
           <div class="col-sm-3">
-            <a href="assets/dist/pdf/mattJuszczyk-resume.pdf" target="_blank" id="resume"><i class="fa fa-file-text fa-3x"></i></a>
+            <a href="assets/dist/pdf/mattJuszczyk-resume.pdf" target="_blank" id="resume">
+              <span class="fa-stack fa-2x">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-file-text fa-stack-1x"></i>
+              </span>
+            </a>
           </div>
         </div>
         <!-- END Contact -->
