--- a/index.html
+++ b/index.html
@@ -163,11 +163,7 @@
     </div>
     <!-- SKILLS -->
     <div class="slide" id="slide4">
-      <div class="container" style="position: relative;">
-        <!-- <hr style="transform: rotate(90deg);" /> -->
-        <!-- <div style="margin-left: 16.66666667%;height:100%; position: absolute; width: 25%;"></div>
-        <div style="margin-left: 41.66666667%;height:100%; position: absolute; width: 25%;"></div>
-        <div style="margin-left: 66.66666667%;height:100%; position: absolute; width: 25%;"></div> -->
+      <div class="container">
         <div class="row">
           <div class="col-xs-12">
             <h2 class="text-center">Skills</h2>
@@ -181,7 +177,7 @@
         <!-- HTML -->
         <div class="row">
           <div class="col-sm-2 col-sm-offset-1 col-lg-1 col-lg-offset-1">
-            <h3 class="no-marg">HTML</h3>
+            <h3 class="no-top-marg">HTML</h3>
           </div>
           <div class="col-sm-9 col-lg-10">
             <div class="progress">
@@ -197,63 +193,83 @@
         <div class="row">
           <div class="col-sm-2 col-sm-offset-1 col-lg-1 col-lg-offset-1">
             <h3 class="no-marg">CSS</h3>
-            <p>LESS&nbsp;&&nbsp;SASS</p>
+            <p class="visible-xs">LESS &amp; SASS</p>
           </div>
           <div class="col-sm-9 col-lg-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
               aria-valuemin="0" aria-valuemax="100" id="css-sk">
-              <!--  style="width:100% -->
                 <span class="sr-only">100% Complete</span>
               </div>
             </div>
           </div>
         </div>
-        <!-- Javascript -->
-        <div class="row">
-          <div class="col-sm-2 col-sm-offset-1 col-lg-1 col-lg-offset-1">
-            <h3 class="no-marg">Javascript</h3>
-            <p>jQuery,&nbsp;Node.js,&nbsp;Skrollr</p>
-          </div>
-          <div class="col-sm-9 col-lg-10">
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="70"
-              aria-valuemin="0" aria-valuemax="100" id="js-sk">
-              <!-- 90% -->
-                <span class="sr-only">90% Complete</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- PHP -->
-        <div class="row">
-          <div class="col-sm-2 col-sm-offset-1 col-lg-1 col-lg-offset-1">
-            <h3 class="no-marg">PHP</h3>
-            <p>Drupal,&nbsp;Laravel,&nbsp;Wordpress</p>
-          </div>
-          <div class="col-sm-9 col-lg-10">
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="80"
-              aria-valuemin="0" aria-valuemax="100" id="php-sk">
-              <!-- 90% -->
-                <span class="sr-only">80% Complete</span>
-              </div>
-            </div>
+        <div class="row hidden-xs">
+          <div class="col-sm-offset-1 col-sm-11">
+            <p>LESS &amp; SASS</p>
           </div>
         </div>
         <!-- Twig -->
         <div class="row">
           <div class="col-sm-2 col-sm-offset-1 col-lg-1 col-lg-offset-1">
             <h3 class="no-marg">Twig</h3>
+            <p class="visible-xs">PHP Templating Language</p>
+          </div>
+          <div class="col-sm-9 col-lg-10">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="80"
+              aria-valuemin="0" aria-valuemax="100" id="twig-sk">
+              <!-- 80% -->
+                <span class="sr-only">80% Complete</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row hidden-xs">
+          <div class="col-sm-offset-1 col-sm-11">
+            <p>PHP Templating Language</p>
+          </div>
+        </div>
+        <!-- Javascript -->
+        <div class="row">
+          <div class="col-sm-2 col-sm-offset-1 col-lg-1 col-lg-offset-1">
+            <h3 class="no-marg">Javascript</h3>
+            <p class="visible-xs">jQuery, Node.js, Skrollr</p>
           </div>
           <div class="col-sm-9 col-lg-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
-              aria-valuemin="0" aria-valuemax="100" id="twig-sk">
-              <!-- 80% -->
+              aria-valuemin="0" aria-valuemax="100" id="js-sk">
+              <!-- 70% -->
                 <span class="sr-only">70% Complete</span>
               </div>
             </div>
+          </div>
+        </div>
+        <div class="row hidden-xs">
+          <div class="col-sm-11 col-sm-offset-1">
+            <p>jQuery, Node.js, Skrollr</p>
+          </div>
+        </div>
+        <!-- PHP -->
+        <div class="row">
+          <div class="col-sm-2 col-sm-offset-1 col-lg-1 col-lg-offset-1">
+            <h3 class="no-marg">PHP</h3>
+            <p class="visible-xs">Drupal, Laravel, Wordpress</p>
+          </div>
+          <div class="col-sm-9 col-lg-10">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="65"
+              aria-valuemin="0" aria-valuemax="100" id="php-sk">
+              <!-- 65% -->
+                <span class="sr-only">65% Complete</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row hidden-xs">
+          <div class="col-sm-offset-1 col-sm-11">
+            <p>Drupal, Laravel, Wordpress</p>
           </div>
         </div>
         <!-- Grails -->
@@ -263,7 +279,7 @@
           </div>
           <div class="col-sm-9 col-lg-10">
             <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="70"
+              <div class="progress-bar" role="progressbar" aria-valuenow="50"
               aria-valuemin="0" aria-valuemax="100" id="grail-sk">
               <!-- 50% -->
                 <span class="sr-only">50% Complete</span>
@@ -271,6 +287,7 @@
             </div>
           </div>
         </div>
+
         <!-- Programming -->
         <div class="row">
           <div class="col-xs-12">
@@ -280,11 +297,11 @@
         <!-- Groovy -->
         <div class="row">
           <div class="col-sm-2 col-sm-offset-1 col-lg-1 col-lg-offset-1">
-            <h3 class="no-marg">Groovy</h3>
+            <h3 class="no-top-marg">Groovy</h3>
           </div>
           <div class="col-sm-9 col-lg-10">
             <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="70"
+              <div class="progress-bar" role="progressbar" aria-valuenow="80"
               aria-valuemin="0" aria-valuemax="100" id="groov-sk">
               <!-- 80% -->
                 <span class="sr-only">80% Complete</span>
@@ -295,7 +312,7 @@
         <!-- C++ -->
         <div class="row">
           <div class="col-sm-2 col-sm-offset-1 col-lg-1 col-lg-offset-1">
-            <h3 class="no-marg">C++</h3>
+            <h3 class="no-top-marg">C++</h3>
           </div>
           <div class="col-sm-9 col-lg-10">
             <div class="progress">
@@ -314,7 +331,7 @@
           </div>
           <div class="col-sm-9 col-lg-10">
             <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="70"
+              <div class="progress-bar" role="progressbar" aria-valuenow="50"
               aria-valuemin="0" aria-valuemax="100" id="pyth-sk">
               <!-- 50% -->
                 <span class="sr-only">50% Complete</span>
