--- a/index.html
+++ b/index.html
@@ -118,6 +118,13 @@
         <div class="screenshots">
           <div class="shot">
             <div class="overlay"></div>
+            <a href="https://mi2.cenmi.org/" target="_blank" alt="Mi2 Link">
+              <img src="assets/dist/img/mi2-ss.png" class="work-preview" alt="Mi2 Screenshot">
+              <h3 class="work-title">(Mi)<sup>2</sup></h3>
+            </a>
+          </div>
+          <div class="shot">
+            <div class="overlay"></div>
             <a href="http://www.theeagleonline.com/" target="_blank" alt="The Eagle Online link">
               <img src="assets/dist/img/awe-ss.png" class="work-preview" alt="The Eagle Online screenshot">
               <h3 class="work-title">The Eagle Online</h3>
@@ -150,14 +157,7 @@
               <img src="assets/dist/img/ohi-ss.png" class="work-preview" alt="American Word screenshot">
               <h3 class="work-title">The Post Athens</h3>
             </a>
-          </div>
-          <div class="shot">
-            <div class="overlay"></div>
-            <a href="http://www.elonnewsnetwork.com/" target="_blank" alt="Elon News Network link">
-              <img src="assets/dist/img/enn-ss.png" class="work-preview" alt="Elon News Network screenshot">
-              <h3 class="work-title">Elon News Network</h3>
-            </a>
-          </div>    
+          </div>  
         </div>
       </div>
     </div>
