--- a/index.html
+++ b/index.html
@@ -357,6 +357,8 @@
               <span class="fa-stack fa-2x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-facebook-official fa-stack-1x"></i>  
+              </span>
+              <p>Facebook</p>
             </a>
           </div>
           <div class="col-sm-3">
@@ -365,6 +367,7 @@
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-envelope fa-stack-1x"></i>
               </span>
+              <p>Email</p>
             </a>
           </div>
           <div class="col-sm-3">
@@ -373,6 +376,7 @@
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-linkedin-square fa-stack-1x"></i>
               </span>
+              <p>LinkedIn</p>
             </a>
           </div>
           <div class="col-sm-3">
@@ -381,6 +385,7 @@
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-file-text fa-stack-1x"></i>
               </span>
+              <p>Resume</p>
             </a>
           </div>
         </div>
