Indicator width fix. Work slides use CSS for style, not JS

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h2 class="text-center">Previous Work</h2>
           </div>
         </div>
-        <div class="screenshots">
+        <div class="screenshots clearfix">
           <div class="shot">
             <div class="overlay"></div>
             <a href="https://mi2.cenmi.org/" target="_blank" alt="Mi2 Link">
