got rid of old site

--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
           <div class="shot">
             <div class="overlay"></div>
             <a href="http://www.dukechronicle.com/" target="_blank" alt="Duke Chronicle link">
-              <img src="assets/dist/img/dtc-ss.png" class="work-preview" alt="Duke Chronicle screenshot">
-              <h3 class="work-title">Duke Chronicle</h3>
+              <img src="assets/dist/img/cen-ss.png" class="work-preview" alt="Duke Chronicle screenshot">
+              <h3 class="work-title">CEN</h3>
             </a>
           </div>
           <div class="shot">
