forgot to update link for new ss

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           </div>
           <div class="shot">
             <div class="overlay"></div>
-            <a href="http://www.dukechronicle.com/" target="_blank" alt="Duke Chronicle link">
+            <a href="https://www.cenmi.org/" target="_blank" alt="Center for Educational Networking link">
               <img src="assets/dist/img/cen-ss.png" class="work-preview" alt="Duke Chronicle screenshot">
               <h3 class="work-title">CEN</h3>
             </a>
