works update, also removed old img files

--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
           </div>
           <div class="shot">
             <div class="overlay"></div>
-            <a href="http://www.theeagleonline.com/" target="_blank" alt="The Eagle Online link">
-              <img src="assets/dist/img/awe-ss.png" class="work-preview" alt="The Eagle Online screenshot">
-              <h3 class="work-title">The Eagle Online</h3>
+            <a href="https://www.saucony.com/en/home" target="_blank" alt="Saucony link">
+              <img src="assets/dist/img/sau-ss.png" class="work-preview" alt="Saucony screenshot">
+              <h3 class="work-title">Saucony</h3>
             </a>
           </div>
           <div class="shot">
