--- a/index.html
+++ b/index.html
@@ -146,16 +146,16 @@
           </div>
           <div class="shot">
             <div class="overlay"></div>
-            <a href="http://www.mndaily.com/" target="_blank" alt="The Cavalier Daily link">
+            <a href="http://www.mndaily.com/" target="_blank" alt="Minnesota Daily link">
               <img src="assets/dist/img/mnd-ss.png" class="work-preview" alt="The Cavalier Daily screenshot">
               <h3 class="work-title">Minnesota Daily News</h3>
             </a>
           </div>
           <div class="shot">
             <div class="overlay"></div>
-            <a href="http://www.thepostathens.com/" target="_blank" alt="American Word link">
-              <img src="assets/dist/img/ohi-ss.png" class="work-preview" alt="American Word screenshot">
-              <h3 class="work-title">The Post Athens</h3>
+            <a href="https://services.petsmart.com/" target="_blank" alt="PetSmart Services link">
+              <img src="assets/dist/img/pss.png" class="work-preview" alt="PetSmart Services screenshot">
+              <h3 class="work-title">PetSmart Services</h3>
             </a>
           </div>  
         </div>
@@ -356,7 +356,7 @@
             </div>
             <div class="col-xs-11 col-xs-offset-1 col-sm-10 col-sm-offset-0">
               <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70"
+                <div class="progress-bar" role="progressbar" aria-valuenow="50"
                 aria-valuemin="0" aria-valuemax="100" id="sf-sk">
                   <span class="sr-only">50% Complete</span>
                 </div>
